# aaai26

./: .gitignore  README.md  pyproject.toml  test.py  testing.py  train.py
conf/train/: dev.yaml  prod.yaml
conf/train/agent/: dev.yaml  prod.yaml
conf/train/environment/: qm9.yaml  trees_lg_1_1.yaml  trees_lg_1_3.yaml  trees_lg_1_5.yaml  trees_lg_3_1.yaml  trees_lg_3_3.yaml  trees_lg_3_5.yaml  trees_lg_5_1.yaml  trees_lg_5_3.yaml  trees_lg_5_5.yaml  trees_sm_1_1.yaml  trees_sm_1_3.yaml  trees_sm_1_5.yaml  trees_sm_3_1.yaml  trees_sm_3_3.yaml  trees_sm_3_5.yaml  trees_sm_5_1.yaml  trees_sm_5_3.yaml  trees_sm_5_5.yaml
conf/train/models/cnn/: dev.yaml  one.yaml  two.yaml
conf/train/models/gnn/: one.yaml  two.yaml
conf/train/models/mlp/: one.yaml  two.yaml
conf/train/training/: dev.yaml  prod.yaml
data/: qm9.csv  qm9_idx.pt
hydra_plugins/: plugins.py
src/: data.py  definitions.py  eval.py  logging.py  monitoring.py  nn.py  plot.py  training.py  util.py
